<resources>
    <string name="app_name">DruberApplication</string>
    <string name="forgot_pwd"><u>Forgot Password?</u></string>
    <string name="email_hint">Email</string>
    <string name="pwd_hint">Password</string>
    <string name="login_txt">LOG IN</string>
    <string name="signup_txt">OR SIGN UP</string>
    <string name="confirm_pwd_hint">Confirm password</string>
    <string name="signup_str">SIGN UP</string>
    <string name="typetxt">Type Text</string>
    <string name="success_text">Success Text</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGV2ZWxvcGVyeHl6IiwiYSI6ImNqa2poMXV1cjFibzQza2p5c3YyZGl6cGMifQ.uMu2kiKV4918S7ITBjdXZQ</string>
    <string name="title_txt">DRONE TAKEOFF CHECKLIST</string>
    <string name="cancel_txt">Cancel</string>
    <string name="resolve_txt">RESOLVE ISSUES TO TAKEOFF</string>
    <string name="drone_connect">Connected to drone</string>
    <string name="camera_connected">Camera is ready</string>
    <string name="drone_storage"><u>Drone storage status unknown</u></string>
    <string name="drone_gps"><u>Drone GPS satillites(0 found)</u></string>
    <string name="home_point"><u>Homepoint not set</u></string>
    <string name="mission_upload">Mission uploading to drone</string>
    <string name="drone_not_connected">Not connected to drone</string>
    <string name="camera_not_connected">Camera is not ready</string>
    <string name="mission_not_upload">Mission not uploaded to drone</string>
    <string name="drone_gps_no">Drone GPS satillites not found</string>
    <string name="ok_button">OK</string>
    <string name="mission_success">Mission completed successfullly!</string>
    <string name="char_m">m</string>
    <string name="gsd_txt">GSD</string>
    <string name="cmpx_txt">cm/px</string>
    <string name="ex_txt">1.1</string>
    <string name="speed_txt">speed:</string>
    <string name="angle_txt">angle:\n45</string>
    <string name="overlap_txt">overlap:</string>
    <string name="face_txt">face:</string>
    <string name="druber_txt">Druber</string>
    <string name="connect_txt">Connect</string>
    <string name="speed_update_txt">N/A m/s</string>
    <string name="altidue_txt">Altitude:</string>
    <string name="altitude_update_txt">N/A m</string>
    <string name="away_txt">N/A m away</string>
    <string name="horizontal_txt">horizontal</string>
    <string name="vertical_txt">vertical</string>
    <string name="low_txt">low</string>
    <string name="high_txt">high</string>
    <string name="forward_txt">forward</string>
    <string name="center_txt">center</string>
    <string name="slow_txt">slow</string>
    <string name="fast_txt">fast</string>
    <string name="grid_type_hint">grid type</string>
    <string name="alt_str">Alt</string>
    <string name="title_activity_drag_maps">Map</string>
    <string name="itemchangedelete">ItemChang/Delete</string>
    <string name="message">Yes for delete and No for item change</string>
    <string name="Yes">Yes</string>
    <string name="no">No</string>
    <string name="month_name">Month name</string>
    <string name="fri">Fri</string>
    <string name="mon">Mon</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="thu">Thu</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
</resources>