<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    card_view:cardPreventCornerOverlap="false">

    <LinearLayout
        android:id="@+id/card_view_item"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:orientation="vertical"
        android:padding="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:padding="5dp"
            android:text="@string/title_txt"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".7"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:orientation="vertical"
                android:weightSum="3">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/connected_to_drone"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/checkimageselector"
                    android:text="@string/drone_not_connected" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/camera_is_ready"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/checkimageselector"
                    android:text="@string/camera_not_connected" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/home_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/checkimageselector"
                    android:text="@string/home_point"
                    android:textColor="@color/colorLightGreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:orientation="vertical"
                android:weightSum="3">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/missoin_uploading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/checkimageselector"
                    android:text="@string/mission_not_upload" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/drone_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/checkimageselector"
                    android:text="@string/drone_storage"
                    android:textColor="@color/colorLightGreen" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/drone_gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/checkimageselector"
                    android:text="@string/drone_gps_no"
                    android:textColor="@color/colorLightGreen" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight=".25"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight=".4"
                android:background="@color/black_overlay"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/cancel_txt"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".1" />

            <Button
                android:id="@+id/resolve_issues_btn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight=".5"
                android:background="@color/colorLightGreen"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/resolve_txt"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>