<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_previous"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_left_black_24dp"
                android:backgroundTint="@color/white"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/text_view_month_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/button_previous"
                android:layout_toStartOf="@+id/button_next"
                android:gravity="center"
                android:text="@string/month_name"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_right_black_24dp"
                android:backgroundTint="@color/white"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                tools:ignore="UnusedAttribute" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linear_layout_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@color/white"
            android:weightSum="7">

            <TextView
                android:id="@+id/text_view_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun" />

            <TextView
                android:id="@+id/text_view_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mon" />

            <TextView
                android:id="@+id/text_view_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tue" />

            <TextView
                android:id="@+id/text_view_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wed" />

            <TextView
                android:id="@+id/text_view_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thu" />

            <TextView
                android:id="@+id/text_view_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fri" />

            <TextView
                android:id="@+id/text_view_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sat" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/calendar_week_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7" />

        <LinearLayout
            android:id="@+id/calendar_week_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7" />

        <LinearLayout
            android:id="@+id/calendar_week_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7" />

        <LinearLayout
            android:id="@+id/calendar_week_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7" />

        <LinearLayout
            android:id="@+id/calendar_week_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7" />

        <LinearLayout
            android:id="@+id/calendar_week_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>